# assertion-cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yaml  deploy.yaml  test.yaml
cmake/: Assertion.cmake  AssertionConfig.cmake  MkdirRecursive.cmake  MyMkdirConfig.cmake
test/: Assert.cmake  AssertExecuteProcess.cmake  AssertFatalError.cmake  CMakeLists.txt  Fail.cmake  IncludeOtherModules.cmake  InternalFormatMessage.cmake  InternalMockMessage.cmake  SectionCreation.cmake  TestCreation.cmake  add_cmake_script_test.cmake  assert.cmake  assert_call.cmake  assert_execute_process.cmake  assert_fatal_error.cmake  assertion_add_test.cmake  fail.cmake  include.cmake  test_add_test.cmake  test_assert.cmake  test_assert_call.cmake  test_assert_number.cmake  test_assert_process.cmake  test_assert_string.cmake  test_assert_version.cmake  test_fail.cmake
test/cmake/: AssertionTest.cmake  InternalTest.cmake  MkdirRecursiveTest.cmake
